force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__ErrorMessage__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ErrorMessage__c</fullName>
        <description>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</description>
        <inlineHelpText>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </CustomField>