force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__EvaluationEvent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EvaluationEvent__c</fullName>
        <description>Event that causes this rule to be evaluated.</description>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Evaluation Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Load</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>