force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__EvaluationOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EvaluationOrder__c</fullName>
        <description>Order in which this price rule is evaluated.</description>
        <inlineHelpText>Specify the order of evaluation for this price rule. Higher ordered rules are evaluated last which means they &quot;win&quot; in case of conflict.</inlineHelpText>
        <label>Evaluation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>