force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupProductField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LookupProductField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Product Lookup. Field must be a lookup to the Product object.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Product Lookup. Field must be a lookup to the Product object.</inlineHelpText>
        <label>Lookup Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Product__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>