force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupRequiredField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LookupRequiredField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</inlineHelpText>
        <label>Lookup Required Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Required__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>