force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupTypeField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LookupTypeField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</inlineHelpText>
        <label>Lookup Type Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Type__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>