force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__Scope__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Scope__c</fullName>
        <description>Scopes the rule to the entire quote or specific product.</description>
        <inlineHelpText>Applies the rule to the entire quote or specific product.</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>