force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</description>
        <inlineHelpText>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Selection</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>